kylin-recorder (1.2.23) v101; urgency=medium

  * 修复bug# 35865：设置窗口默认不居中显示 
  * 修复bug# 35607：保存录音时可将录音命名为.mp3，导致此音频变为隐藏文件  
  * 修复bug# 34915：在麒麟录音界面删除的录音文件，不会进入回收站 
  * 修复bug# 24333：文件列表缺少文件右键点击功能 

 -- baijincheng <baijincheng@kylinos.cn>  Fri, 29 Jan 2021 09:40:00 +0800

kylin-recorder (1.2.22) v101; urgency=medium

  * 关于界面服务与支持修改为链接

 -- baijincheng <baijincheng@kylinos.cn>  Thu, 28 Jan 2021 09:40:00 +0800

kylin-recorder (1.2.21) v101; urgency=medium

  * 修复bug# 36272：【中文化】【麒麟录音】播放/暂停、删除按钮的悬浮框未汉化

 -- baijincheng <baijincheng@kylinos.cn>  Wed, 27 Jan 2021 20:05:00 +0800

kylin-recorder (1.2.20) v101; urgency=medium

  * 修复bug# 34901：深色主题下主界面边框有白边
  * 修复bug# 32064：保存文件时保存文件失败
  * 修复bug# 25006：深色模式下，设置弹窗UI异常（设置界面白边）

 -- baijincheng <baijincheng@kylinos.cn>  Mon, 25 Jan 2021 20:25:00 +0800

kylin-recorder (1.2.19) v101; urgency=medium

  * 修复bug#34793：设置界面边角显示黑色问题
  * 修复bug#35236：播放和删除录音文件的悬浮提示未汉化
  * 修复bug#24255：录音界面音量进度条数值大小修改
  * 修复bug#20538：最小化到任务栏，缩略图窗口名未汉化

 -- baijincheng <baijincheng@kylinos.cn>  Thu, 21 Jan 2021 20:25:00 +0800

kylin-recorder (1.2.18) v101; urgency=medium

  * 内测时，修复raw文件路径设置错误的问题

 -- baijincheng <baijincheng@kylinos.cn>  Tue, 19 Jan 2021 20:25:00 +0800

kylin-recorder (1.2.17) v101; urgency=medium

  * 修复bug#33860：修改设置界面文件格式的间隔问题
  * 修复bug#32051：深色主题下界面优化
  * 修复bug#25006：深色模式下，设置弹窗UI异常
  * 修复bug#34787：静音图标显示需优化
  * 修改三联按钮的菜单按钮图标名,切换启动时加载列表的方式

 -- baijincheng <baijincheng@kylinos.cn>  Tue, 19 Jan 2021 21:00:00 +0800

kylin-recorder (1.2.16) v101; urgency=medium

  * 修改desktop文件中的Name,首字母大写
  * bug#31064：鼠标悬停在停止与暂停按钮上无提示

 -- baijincheng <baijincheng@kylinos.cn>  Fri, 15 Jan 2021 21:00:00 +0800

kylin-recorder (1.2.15) v101; urgency=medium

  * desktop文件更改应用类别组

 -- baijincheng <baijincheng@kylinos.cn>  Thu, 14 Jan 2021 21:41:00 +0800

kylin-recorder (1.2.14) v101; urgency=medium

  * bug#33103：关于弹窗没有模态处理
  * bug#33033：关于弹窗可以打开多个且不能关闭
  * bug#31996：界面UI优化
  * bug#31078：夜间模式下，麒麟录音菜单栏按钮反白
  * bug#31064：鼠标悬停在停止与暂停按钮上无提示